--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,11 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
+<link rel="icon" type="image/png" href="/assets/favicons/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/assets/favicons/favicon.svg" />
+<link rel="shortcut icon" href="/assets/favicons/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="Miguel P.C." />
+<link rel="manifest" href="/assets/favicons/site.webmanifest" />
 
 <!-- end custom head snippets -->
