--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,3 +7,7 @@ search: false
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+$global-font-family: $suse;
+$header-font-family: $suse;
+$caption-font-family: $suse;
