--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,12 +2,12 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 search: false
 ---
+$sans-serif: "SUSE", -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
+$global-font-family: $sans-serif;
+$header-font-family: $sans-serif;
+$caption-font-family: $sans-serif;
 
 @charset "utf-8";
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
-
-$global-font-family: $suse;
-$header-font-family: $suse;
-$caption-font-family: $suse;
