--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,14 @@
 <!-- start custom head snippets -->
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0G8JDME5YX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0G8JDME5YX');
+</script>
+
 <!-- insert font -->
 <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
 
